--- a/package.json
+++ b/package.json
@@ -1,30 +1,26 @@
 {
-  "name": "vite-project_blog",
-  "private": true,
-  "version": "0.0.0",
+  "name": "mern-auth",
+  "version": "1.0.0",
+  "description": "",
   "type": "module",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+  "dev": "nodemon api/index.js",
+  "start": "node api/index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dextercoo/vite-project_blog.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/dextercoo/vite-project_blog/issues"
+  },
+  "homepage": "https://github.com/dextercoo/vite-project_blog#readme",
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
-    "vite": "^5.0.8"
+    "express": "^4.18.2",
+    "nodemon": "^3.0.3"
   }
 }
